force-app/main/default/objects/Test_Drive__c/Test_Drive__c.object-meta.xml
<CustomObject>
    <label>시승</label>
    <nameField>
        <label>시승 이름</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>시승</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>