force-app/main/default/objects/Test_Drive__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>계정</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>시승</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>