force-app/main/default/objects/Test_Drive__c/fields/color__c.field-meta.xml
<CustomField>
    <fullName>color__c</fullName>
    <formula>TEXT( Product__r.Color__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>컬러</label>
    <type>Text</type>
</CustomField>