force-app/main/default/objects/Test_Drive__c/fields/Customer_Require__c.field-meta.xml
<CustomField>
    <fullName>Customer_Require__c</fullName>
    <label>고객 요구사항</label>
    <length>255</length>
    <type>Text</type>
</CustomField>