force-app/main/default/objects/Test_Drive__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>리드</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>시승</relationshipLabel>
    <relationshipName>Lead</relationshipName>
    <type>Lookup</type>
</CustomField>