force-app/main/default/objects/Test_Drive__c/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <label>모델명</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EV3</fullName>
            </value>
            <value>
                <fullName>EV4</fullName>
            </value>
            <value>
                <fullName>EV6</fullName>
            </value>
            <value>
                <fullName>EV9</fullName>
            </value>
            <value>
                <fullName>rayev</fullName>
                <label>레이 EV</label>
            </value>
            <value>
                <fullName>소울 EV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>