force-app/main/default/objects/Test_Drive__c/fields/option__c.field-meta.xml
<CustomField>
    <fullName>option__c</fullName>
    <formula>TEXT(Product__r.Option__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>옵션</label>
    <type>Text</type>
</CustomField>