force-app/main/default/objects/Test_Drive__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>제품</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>시승</relationshipLabel>
    <relationshipName>Product</relationshipName>
    <type>Lookup</type>
</CustomField>