force-app/main/default/objects/Test_Drive__c/fields/Test_drive_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_drive_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>시승 날짜</label>
    <type>DateTime</type>
</CustomField>