force-app/main/default/objects/Test_Drive__c/fields/Test_Drive_ID__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_ID__c</fullName>
    <displayFormat>TD-{0000}</displayFormat>
    <label>시승 ID</label>
    <type>AutoNumber</type>
</CustomField>