force-app/main/default/objects/Test_Drive__c/fields/Test_Drive_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_Vehicle__c</fullName>
    <label>시승 차량</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>모닝</fullName>
            </value>
            <value>
                <fullName>레이</fullName>
            </value>
            <value>
                <fullName>K5</fullName>
            </value>
            <value>
                <fullName>K8</fullName>
            </value>
            <value>
                <fullName>K9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>