force-app/main/default/objects/Test_Drive__c/fields/trim__c.field-meta.xml
<CustomField>
    <fullName>trim__c</fullName>
    <formula>TEXT(Product__r.Trim__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>트림</label>
    <type>Text</type>
</CustomField>